# erebor-record-keeper

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  sqlx-data.json
data/challenges/: con_of_the_rings_2018.toml  con_of_the_rings_2019.toml  con_of_the_rings_2020.toml  council_of_100_kangs.csv  leaguecg-rotk-2021.toml  lotr-weekend-2020.toml  the_purple_wizard_guantlet_2020.toml
data/lotr/: alep-01-children-of-eorl.toml  alep-01-the-children-of-eorl.toml
migrations/: 20200814075542_create_scenarios_table.sql  20200818044428_create_event_table.sql  20200818044428_create_events_table.sql  20200918234018_create_challenges_table.sql  20200922061847_create_users_table.sql  20210122021907_drop_challenges_name_unique_constraint.sql  20210929070436_add_active_date_to_challenges_events.sql
src/: commands.rs  hob_scenario_parser.rs  lib.rs  main.rs  models.rs  utils.rs
src/commands/: challenge.rs  event.rs  quest.rs
src/commands/event/: admin.rs  group_challenges.rs  group_scenarios.rs  kang.rs
src/models/: challenge.rs  event.rs  scenario.rs  set.rs  user.rs
