[package]
name = "erebor-record-keeper"
version = "0.1.0"
authors = ["Terence Lee <hone02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
csv = "1.1"
dotenv = "0.15"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.9.0-rc.0", features = ["collector", "framework", "standard_framework"] }
sqlx = { version = "0.4.0-beta.1", default_features = false, features = ["macros", "postgres", "runtime-tokio"] }
tokio = { version = "0.2", features = ["macros"] }
toml = "0.5"
