[package]
name = "erebor-record-keeper"
version = "0.1.0"
authors = ["Terence Lee <hone02@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
csv = "1.1"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.10", features = ["collector", "framework", "standard_framework"] }
sqlx = { version = "0.6.0", default_features = false, features = ["macros", "offline", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2.0"

openssl-sys = "*"

[features]
vendored-openssl = ["openssl-sys/vendored"]
